--- a/wordpress-redirect-loop-after-changing-url/index.html
+++ b/wordpress-redirect-loop-after-changing-url/index.html
@@ -123,43 +123,31 @@
         <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <div class="row top">
+        <div class="row top hidden">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="widget">
                     <h4>Coding Callback</h4>
                     <p>
-                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
+
                     </p>               
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="widget">
-                    <h4>Contacts</h4>
-                    <ul class="contact-details">
-						<li class="address">Leicester, United Kingdom</li>
-						<li class="telephone"></li>
-						<li class="email"><a href="mailto:  "> &nbsp;contact@codecallback.com</a></li>
-						<!--<li class="schedule"></li>-->															
-			        </ul>              
+             
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="widget">
                     <h4>Coding Callback</h4>
                     <p>
-                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
+
                     </p>               
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                    <div class="widget">
-                    <h4>Contacts</h4>
-                    <ul class="contact-details">
-						<li class="address">Leicester, United Kingdom</li>
-						<li class="telephone"></li>
-						<li class="email"><a href="mailto:  "> &nbsp;contact@codecallback.com</a></li>
-						<!--<li class="schedule"></li>-->															
-			        </ul>              
+                    
                 </div>
             </div>
 
