reorganised front page

--- a/how-to-bulk-check-domain-availability-using-nodejs/index.html
+++ b/how-to-bulk-check-domain-availability-using-nodejs/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Steve McArthur">
     <meta property="og:title" content="How to Bulk Check Domain Availability Using Node.js">
     <meta property="og:description" content="Whilst developing a website for a client I had a need to bulk check the availability of potential .com domain names. Finding .com domain names for the words you would like to use can be quite a job. Most of the websites that allow you to check whether a domain ...">
-    <meta property="og:image" content="/img/vba-laptop.jpg">
+    <meta property="og:image" content="/img/vba-laptop-sml.jpg">
     <meta property="og:url" content="https://www.codecallback.co.uk/how-to-bulk-check-domain-availability-using-nodejs">
     
     <link rel="icon" href="/favicon.ico">
