--- a/how-to-call-a-website-from-vba/index.html
+++ b/how-to-call-a-website-from-vba/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Steve McArthur">
     <meta property="og:title" content="How to Call a Website or Webservice from VBA and Populate your Excel Data with Live Updates">
     <meta property="og:description" content="Calling a website URL in VBA is fairly straight forward. The key is to use a MSXML2.serverXMLHTTP dll reference. This does all the heavy lifting involved in making a http request to a URL.  Public Sub CallWebPage() Dim xmlhttp As Object Dim myurl As String Dim txt As String 'use ...">
-    <meta property="og:image" content="/img/vba-laptop.jpg">
+    <meta property="og:image" content="/img/vba-laptop-sml.jpg">
     <meta property="og:url" content="https://www.codecallback.co.uk/how-to-call-a-website-from-vba">
     
     <link rel="icon" href="/favicon.ico">
