--- a/create-interactive-chart-in-excel/index.html
+++ b/create-interactive-chart-in-excel/index.html
@@ -91,7 +91,7 @@
   </div>
   </div>
 </nav>          <div class="header-content">
-        <div class="overlay">
+        <div class="overlay excel vba">
         <div class="container">
         <div class="header-wrapper">
         <div class="row">
