--- a/customer-loyalty-ultimate-guide/index.html
+++ b/customer-loyalty-ultimate-guide/index.html
@@ -91,7 +91,7 @@
   </div>
   </div>
 </nav>          <div class="header-content">
-        <div class="overlay">
+        <div class="overlay marketing">
         <div class="container">
         <div class="header-wrapper">
         <div class="row">
