--- a/some-kind-of-disk-io-error-occurred-sqlite/index.html
+++ b/some-kind-of-disk-io-error-occurred-sqlite/index.html
@@ -91,7 +91,7 @@
   </div>
   </div>
 </nav>          <div class="header-content">
-        <div class="overlay">
+        <div class="overlay sqlite net">
         <div class="container">
         <div class="header-wrapper">
         <div class="row">
