--- a/wordpress-redirect-loop-after-changing-url/index.html
+++ b/wordpress-redirect-loop-after-changing-url/index.html
@@ -91,7 +91,7 @@
   </div>
   </div>
 </nav>          <div class="header-content">
-        <div class="overlay">
+        <div class="overlay wordpress">
         <div class="container">
         <div class="header-wrapper">
         <div class="row">
