added metalsmith article - separate out prism js

--- a/create-interactive-chart-in-excel/index.html
+++ b/create-interactive-chart-in-excel/index.html
@@ -174,7 +174,16 @@ Type products in the Source. Click ok.</p>
     <script src="/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="/js/prism.js"></script>
+    <script src="/js/prism/prism.js"></script>
+    <script src="/js/prism/prism-javascript.js"></script>
+    <script src="/js/prism/prism-json.js"></script>
+    <script src="/js/prism/prism-visual-basic.js"></script>
+    <script src="/js/prism/prism-markup.js"></script>
+    <script src="/js/prism/prism-markup-templating.js"></script>
+    <script src="/js/prism/prism-handlebars.js"></script>
+
+
+
 
 
     </body>
