--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     <script src="/js/prism/prism-markup.js"></script>
     <script src="/js/prism/prism-markup-templating.js"></script>
     <script src="/js/prism/prism-handlebars.js"></script>
+    <script src="/js/prism/prism-coffeescript.js"></script>
 
 
 
