--- a/how-create-a-website-using-metalsmith/index.html
+++ b/how-create-a-website-using-metalsmith/index.html
@@ -269,6 +269,7 @@ An interesting post about how it's going to be different this time around. I'm g
     <script src="/js/prism/prism-markup-templating.js"></script>
     <script src="/js/prism/prism-handlebars.js"></script>
     <script src="/js/prism/prism-coffeescript.js"></script>
+    <script src="/js/prism/prism-csharp.js"></script>
 
 
 
