--- a/create-interactive-chart-in-excel/index.html
+++ b/create-interactive-chart-in-excel/index.html
@@ -181,6 +181,7 @@ Type products in the Source. Click ok.</p>
     <script src="/js/prism/prism-markup-templating.js"></script>
     <script src="/js/prism/prism-handlebars.js"></script>
     <script src="/js/prism/prism-coffeescript.js"></script>
+    <script src="/js/prism/prism-csharp.js"></script>
 
 
 
