--- a/customer-loyalty-ultimate-guide/index.html
+++ b/customer-loyalty-ultimate-guide/index.html
@@ -187,6 +187,7 @@ And in a world where hundreds of different options for virtually any product or 
     <script src="/js/prism/prism-markup-templating.js"></script>
     <script src="/js/prism/prism-handlebars.js"></script>
     <script src="/js/prism/prism-coffeescript.js"></script>
+    <script src="/js/prism/prism-csharp.js"></script>
 
 
 
