--- a/how-to-call-a-website-from-vba/index.html
+++ b/how-to-call-a-website-from-vba/index.html
@@ -272,6 +272,7 @@ JsonConverter.</p>
     <script src="/js/prism/prism-markup-templating.js"></script>
     <script src="/js/prism/prism-handlebars.js"></script>
     <script src="/js/prism/prism-coffeescript.js"></script>
+    <script src="/js/prism/prism-csharp.js"></script>
 
 
 
