--- a/run-a-webserver-anywhere/index.html
+++ b/run-a-webserver-anywhere/index.html
@@ -193,6 +193,7 @@
     <script src="/js/prism/prism-markup-templating.js"></script>
     <script src="/js/prism/prism-handlebars.js"></script>
     <script src="/js/prism/prism-coffeescript.js"></script>
+    <script src="/js/prism/prism-csharp.js"></script>
 
 
 
